--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   geocoding: ^2.1.0
   flutter_map: ^6.1.0
   latlong2: ^0.9.0
+  flutter_dotenv: ^5.2.1
 
 dev_dependencies:
   flutter_test:
@@ -32,5 +33,7 @@ dev_dependencies:
   flutter_lints: ^5.0.0
 
 flutter:
-
+  assets:
+    - assets/.env
+    
   uses-material-design: true
